# la-classy

./: .gitignore  README.md  deno.json  deps.ts  mod.ts  version.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
crates/: README.md
crates/classy/: Cargo.toml
examples/: binary_iris.ts  iris.ipynb  iris.ts  linear_svm.ts  logistic_regression.ts  regression.ts
examples/iris/: iris.csv  iris_test.csv  test.ts
examples/linear/: Student_Performance.csv  sgd.ts  test.ts
examples/spam/: README.md  spam.csv  (+3 more)
rust/: Cargo.toml
rust/src/: lib.rs  types.rs
rust/src/classification/: knn.rs  logistic_regression.rs  mod.rs
rust/src/classification/binary/: logistic_regression.rs  mod.rs
rust/src/classifier/: svc.rs
rust/src/common/: functions.rs  mod.rs  point.rs  scheduler.rs  types.rs
rust/src/core/: functions.rs  loss.rs  mod.rs  scheduler.rs  solver.rs
rust/src/core/ffi/: optimizers.rs  regularizer.rs
rust/src/core/gradient_descent/: gd.rs  minibatch_sgd.rs  mod.rs  sgd.rs
rust/src/core/least_squares/: mod.rs  ols.rs
rust/src/core/loss/: crossentropy.rs
rust/src/core/optimizers/: adam.rs  mod.rs  noop.rs
rust/src/linear/: gradient_descent.rs  logistic_regression.rs  ols.rs  sgd_linear_regression.rs
rust/src/models/linear/: logistic_regression.rs  mod.rs  sgd_linear_regression.rs
rust/src/optimizer/: adam.rs  gd.rs  minibatch_sgd.rs  mod.rs  optimize.rs  sgd.rs
rust/src/regression/: linear_regression.rs
rust/src/solver/: gradient_descent.rs  graqd.rs  mod.rs  ols.rs
rust/src/svm/: svc.rs
src/: helpers.ts  mod.ts  native.ts
(+72 files in other folders)
