[package]
name = "classylala"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"